infrastructure/system/longhorn-system/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.services.sbling.net`)
      kind: Rule
      # middlewares:
      #   - name: oidc-middleware
      #     namespace: longhorn-system
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: longhorn-services-sbling-net-prod-cert
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: longhorn-cert
# spec:
#   commonName: longhorn.services.sbling.net
#   secretName: longhorn-services-sbling-net-prod-cert
#   dnsNames:
#     - longhorn.services.sbling.net
#   issuerRef:
#     kind: ClusterIssuer
#     name: cert-issuer-prod
